k8s/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-redirect-https
  namespace: ${K8S_NAMESPACE}
spec:
  redirectScheme:
    scheme: https
    permanent: true
