k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yaml-validator
  namespace: ${K8S_NAMESPACE}
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: ${K8S_NAMESPACE}-http-redirect-https@kubernetescrd
spec:
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yaml-validator
                port:
                  number: 8080
  tls:
    - hosts:
        - ${DOMAIN}
      secretName: yaml-validator-tls
